[package]
name = "softfp"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"
description = "Software floating point operation library"
categories = ["no-std", "mathematics"]
keyword = ["float", "softfloat"]
repository = "https://github.com/nbdd0121/softfp"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.1"
borsh = { version = "0.9.3", optional = true }

[features]
register = []
serde = ["dep:borsh"]
default = ["register", "serde"]